# mcdata

./: .gitignore  PLAN.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
configs/: actions.yml  asset_sets.yml  hosts.yml.example  profiles.yml  resourcepack_catalog.yml  scene.yml  terrains.yml
docker/: l40s-run.example.sh  l40s.Dockerfile
docs/: ARCHITECTURE.md  CODE_STANDARDS.md  action_curriculum_sampling.md  data_diversity_contract.md  external_action_rollouts.md  headless_gpu.md  minestudio_vpt_phase2_runbook.md  plan.md  resourcepack_diversity_catalog.md  solaris_engine_phase1_contract.md  terrain_registry.md  training_generalization_contract.md
scripts/: bootstrap_remote.sh  check_standards.py  clean_tmp_plan.sh  collab_handoff.sh  collab_notify.sh  collab_wait.sh  dev_check.sh  headless_xorg_nvidia.sh  install_headless_xorg_service.sh  l40s_container_gpu_display.sh  lookdev_render_batch.sh  matrix_shard.sh  mcdata_env.sh  pointer_probe.py  pull_runs_from_remote.sh  render_once.sh  sync_to_remote.sh
tests/: test_action_curriculum.py  test_action_effect.py  test_action_source.py  test_action_trace.py  test_astar.py  test_capture_settings.py  test_cli_matrix.py  test_combat_executor.py  test_configs.py  test_curriculum_plan.py  test_dataset.py  test_feedback_navigation.py  test_feedback_qa.py  test_feedback_roam.py  test_golden_trajectories.py  test_lane_isolation.py  test_lookdev_batch.py  test_manifest.py  test_manifest_files.py  test_minestudio_rollout_import.py  test_modrinth.py  test_navigation_surface.py  test_options.py  test_packs.py  (+21 more)
(+185 files in other folders)
