[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdata"
version = "0.1.0"
description = "Minecraft rendering data collection pipeline."
requires-python = ">=3.11"
dependencies = [
  "portablemc>=4.4.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "jsonschema",
  "ruff",
]
qa = [
  "numpy",
  "Pillow",
  "matplotlib",
]

[project.scripts]
mcdata = "mcdata.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
